--- a/Changes
+++ b/Changes
@@ -1,10 +1,59 @@
 Changes for perl module Storm
 
-0.02 (ALPHA)
-    - updated documentation
+
+0.09
+- removed use of MooseX::Method::Signatures
+
+
+0.08
+- add "has_object" method to Storm::LiveObjects
+BUG FIXES:
+- fixed bug where refresh query was not working on objects with inherited attributes
+
+
+
+0.07
+- updated tutorial (section on creating relationships was outdated)
+
+
+0.06 (ALPHA)
+- added "define" attribute property for custom column definitions
+- added "disconnect" method to Storm::Source
+BUG FIXES:
+- fixed bug with custom inflators/deflators where the Storm object $orm was not
+being passed to the inflator/deflatore codeblock
+
+0.05 (ALPHA)
+BUG FIXES:
+- fixed error when overriding properties of inherited attributes
+
+0.04.1 (ALPHA)
+- added ::SQL::Column class
+BUG FIXES:
+- column names were incorrect in sql statements for objects with inherited
+    attributes
+- column names were incorrect in the where clause of sql statements
+
+0.04 (ALPHA)
+- added Storm::Model, for constructing models
+- added "install_model" method to aeolus
+- disabled installation of foreign_keys in "install_class" and
+    "install_junction_tables"
+- deprecated "has_many" sugar
+- added "many_to_many" and "one_to_many" sugar for defining relationships
+- automatically defines foreign_match, local_match, junction_table values
+    in many-to-many relationships if not supplied by user
+- added support for inheritance (needs more work)
+- Storm::Builder renamed to Storm::Object
+- Storm::Role::Meta::Class::table to Storm::Role::Meta::Class::storm_table
+- added meta-trait "AutoTable"
+
+0.03 (ALPHA)
+- updated documentation
+- added StormSQLWhereBoolean type
 
 0.02 (ALPHA)
-    - updated documentation
+- updated documentation
 
 0.01 (ALPHA)
-    - original release, 11/20/2010
+- original release, 11/20/2010
